--- a/README
+++ b/README
@@ -75,6 +75,13 @@ Fog of war has been implemented. The player can only see within a 3x3 grid. S/He
 The player can tell if a cell is within the visible 3x3 grid if the cell has colors, i.e., not white on black. The player can only see monsters within the grid as well.
 NOTE: Without --nummon you automatically win the game. For some TAs the win/lose screen does not appear. Valgrind takes FOREVER and the invalid reads are index out of bounds error that the code handles safely.
 
+1.07:
+Added Monster parsing. Will now parse a file containing description of a monster.
+Note: doesn't put them in the game yet. Creates a vector of monster class to store the data.
+Need to use --parsemon flagg by itself
+
+Usage for monster parsing: ./dungeonGenerator --parsemon
+
 Usage using time as seed: ./dungeonGenerator
 
 Usage using int as seed: ./dungeonGenerator <number>
